# MainEventMogul

./: pyproject.toml
boxing/: engine.py  models.py  prob.py
scripts/: match_engine.py  qa_parity.py  simulate_fight.py
tests/: test_engine.py  test_models.py  test_prob.py  test_telemetry.py
